--- a/app/globals.css
+++ b/app/globals.css
@@ -10,8 +10,6 @@
   .swiper-slide {
     text-align: center;
     font-size: 18px;
-    background: #fff;
-  
     /* Center slide text vertically */
     display: flex;
     justify-content: center;
@@ -30,23 +28,8 @@
   }
   
   .mySwiper2 {
-    height: 80%;
+    height: 100%;
     width: 100%;
-  }
-  
-  .mySwiper {
-    height: 10%;
-    box-sizing: border-box;
-    padding: 10px 0;
-  }
-  
-  .mySwiper .swiper-slide {
-    width: 10%;
-    opacity: 0.4;
-  }
-  
-  .mySwiper .swiper-slide-thumb-active {
-    opacity: 1;
   }
   
   .swiper-slide img {
@@ -55,13 +38,9 @@
     object-fit: cover;
   }
 
-
-
-
 .card {
-  width: 420px;
-  height: 340px;
-  margin: 1em;
+  width: 550px;
+  height: 550px;
   perspective: 1500px;
   .content {
     position: relative;
@@ -74,7 +53,6 @@
 
 .more {
   display: none;
-
   &:checked ~ .content {
     transform: rotateY(180deg);
   }
@@ -114,6 +92,7 @@
     border-radius: 6px;
     backface-visibility: hidden;
   }
+  /* 裏返すボタン */
   .inner {
     grid-template-rows: 5fr 1fr 1fr 2fr 1fr;
     justify-items: center;
@@ -124,39 +103,11 @@
   transform: rotateY(180deg);
   background-color: #fff;
   border: 2px solid rgb(240, 240, 240);
+  /* 表に戻るボタン */
   .inner {
     grid-template-rows: 1fr 2fr 1fr 2fr 14fr 1fr 1fr;
-    grid-template-columns: repeat(4, auto);
-    grid-column-gap: 0.8em;
     justify-items: center;
-  }
-
-  .description {
-    grid-row: 5;
-    grid-column: 1/-1;
-    font-size: 0.86em;
-    border-radius: 5px;
-    font-weight: 600;
-    line-height: 1.4em;
-    overflow: auto;
-    padding-right: 10px;
-  }
-
-  .location,
-  .price {
-    font-weight: 600;
-    grid-row: 1;
-    font-size: 0.86em;
-  }
-
-  .location {
-    grid-column: 1/3;
-    justify-self: left;
-  }
-
-  .price {
-    grid-column: 3/-1;
-    justify-self: right;
+    align-items: center;
   }
 
   .button {
